--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <!-- navbar -->
-<nav class="navbar navbar-light navbar-expand-lg bg-light justify-content-center sticky-top">
+<nav class="navbar navbar-light navbar-expand-sm bg-light justify-content-center sticky-top">
    
     <a href="index.html"><img src="src/booksy.svg" width="140" height="75" class="d-inline-block align-top" alt=""></a>
  
