--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
  <!--==========================
     Hero Section
   ============================-->
- <section id="hero">
+ <section id="hero" class="mt-4 ">
     <div class="hero-container">
 
 
@@ -189,7 +189,7 @@
 
  <!-- map -->
 
-<iframe class="container-fluid"  height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJu-j9cFQw4kcR_e8QTsVqs4k&key=AIzaSyBDu0906uVHbiUv6FgJ7FW6boOQcHI6P_g" allowfullscreen></iframe>
+<iframe class="container-fluid mt-4"  height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJu-j9cFQw4kcR_e8QTsVqs4k&key=AIzaSyBDu0906uVHbiUv6FgJ7FW6boOQcHI6P_g" allowfullscreen></iframe>
 
   <!-- end map-->
 
