--- a/index.html
+++ b/index.html
@@ -73,7 +73,26 @@
     </ul>
   </div>
 </nav> -->
-<nav class="navbar navbar-light navbar-expand-sm bg-light justify-content-center sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#!">Navbar</a>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#!">Link</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+<!-- <nav class="navbar navbar-light navbar-expand-sm bg-light justify-content-center sticky-top">
    
     <a href="index.html"><img src="src/booksy.svg" width="140" height="75" class="d-inline-block align-top" alt=""></a>
  
@@ -107,7 +126,7 @@
         </ul>
 
     </div>
-</nav>
+</nav> -->
 <!-- navbar end  -->
 
 
