--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </ul>
   </div>
 </nav> -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -143,7 +143,7 @@
  <!--==========================
     Hero Section
   ============================-->
- <section id="hero" class="mt-4 ">
+<!--  <section id="hero" class="mt-4 ">
     <div class="hero-container">
 
 
@@ -174,7 +174,9 @@
       
 
     </div>
-  </section><!-- #hero -->
+  </section> -->
+
+  <!-- #hero -->
        
 
 
