--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <link rel="icon" href="src/booksy.ico" type="image/gif" sizes="16x16">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<title>Lutile</title>
 </head>
@@ -325,8 +327,7 @@ J'<span class=heart>&#9829;</span> le Perche
 
 
 
-
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
 
 
