--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
  <!--==========================
     Hero Section
   ============================-->
-<!--  <section id="hero" class="mt-4 ">
+ <section id="hero" class="mt-4 ">
     <div class="hero-container">
 
 
@@ -182,7 +182,7 @@
       
 
     </div>
-  </section> -->
+  </section>
 
   <!-- #hero -->
        
@@ -228,7 +228,7 @@
 
 
 <!-- Footer -->
-<footer class="page-footer font-small unique-color-dark mt-4">
+<footer class="page-footer font-small unique-color-dark mt-4 mb-0">
 
   <div style="background-color: #6351ce;">
     <div class="container">
