--- a/aide.html
+++ b/aide.html
@@ -18,46 +18,26 @@
 
 
 <!-- navbar -->
-<nav class="navbar navbar-light navbar-expand-md bg-light justify-content-center sticky-top">
-   
-  <a href="index.html"><img src="src/logo.jpg" width="auto" height="auto" class="d-inline-block align-top" alt=""></a>
-    <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse collapse justify-content-between align-items-center w-100 align-middle" id="collapsingNavbar2">
-        <ul class="navbar-nav mx-auto text-center">
-            <li class="nav-item active alert-info rounded">
-                <a class="nav-link" href="aide.html">Les types d'aide <span class="sr-only">Home</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="benevoles.html">Les Bénevoles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="apprenants.html">Les Apprenants</a> 
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="conseil.html">Conseil d'administration</a> 
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="manifestations.html">Manifestations</a> 
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="historique.html">L'historique</a> 
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="fichiers.html">Les fiches pédagogiques</a> 
-            </li>
-
-        </ul>
-
-
-
-        <ul class="nav navbar-nav flex-row justify-content-center flex-nowrap">
-            <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-facebook mr-1"></i></a> </li>
-            <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-twitter"></i></a> </li>
-        </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <!--   <a class="navbar-brand" href="index.html"><img src="src/booksy.svg" width="140" height="75" class="d-inline-block align-top" alt=""></a>
+  -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navi_trgt" aria-controls="Navi_trgt" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon navbar-toggler-left"></span>
+  </button>
+  <div class="collapse navbar-collapse ml-auto" id="Navi_trgt">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="index.html">Inicio</a>
+      <a class="nav-item nav-link alert-info rounded" href="aide.html">Les types d'aide 
+      <a class="nav-item nav-link" href="benevoles.html">Les Bénevoles</a>
+      <a class="nav-item nav-link" href="apprenants.html">Les Apprenants</a>
+      <a class="nav-item nav-link" href="conseil.html">Conseil d'administration</a>
+      <a class="nav-item nav-link" href="manifestations.html">Les Manifestations</a>
+      <a class="nav-item nav-link" href="historique.html">  L'historique</a>
+      <a class="nav-item nav-link" href="fichiers.html">Les fiches pédagogiques</a>
     </div>
+  </div>
 </nav>
+
 <!-- navbar end  -->
 
 
