--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
 <link rel="icon" href="src/booksy.ico" type="image/gif" sizes="16x16">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
 
