--- a/benevoles.html
+++ b/benevoles.html
@@ -33,7 +33,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse " id="Navi_trgt">
-    <div class="navbar-nav ml-auto">
+    <div class="navbar-nav ml-auto text-center d-flex align-items-center">
       <a class="nav-item nav-link" href="index.html">Inicio</a>
       <a class="nav-item nav-link" href="aide.html">Les types d'aide  <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link alert-info rounded" href="benevoles.html">Les Bénevoles</a>
