--- a/historique.html
+++ b/historique.html
@@ -34,7 +34,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse " id="Navi_trgt">
-    <div class="navbar-nav ml-auto">
+    <div class="navbar-nav ml-auto text-center d-flex align-items-center">
       <a class="nav-item nav-link " href="index.html">Inicio</a>
       <a class="nav-item nav-link" href="aide.html">Les types d'aide  <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="benevoles.html">Les Bénevoles</a>
@@ -54,7 +54,7 @@
 
 <div class="container mt-4">
 
-<h1 class="display-3">L'HISTORIQUE</h1>
+<div class="d-flex justify-content-center"><h3 class="display-3">L'HISTORIQUE</h3></div>
 
  <hr size = "10px">
 
@@ -62,7 +62,9 @@
 
 
 
-<h1 id="big"><span class="badge badge-danger mt-4">1984</span></h1>
+<div class="d-flex justify-content-center"><h1 id="big"><span class="badge badge-danger mt-4">1984</span></h1></div>
+
+
 
   <div id="hist">Publication d'un rapport " Des illettrés en France " faisant état de 2,5 millions d'illettrés parmi la population en âge de travailler.  
           Création du Groupe Permanent de Lutte contre L'Illettrisme par le Conseil des Ministres, pour faire le point sur l'Illettrisme en France.  
@@ -71,7 +73,7 @@
   </div>
 
 
-<h1 id="big"><span class="badge badge-danger mt-4">1992</span></h1>
+<div class="d-flex justify-content-center"><h1 id="big"><span class="badge badge-danger mt-4">1992</span></h1></div>  
  
 
  <div id="hist">
@@ -82,7 +84,7 @@ Mais compte-tenu de l'étendue de la zône à couvrir, des apprenants isolés n'
 
 
 
-<h1 id="big"><span class="badge badge-danger mt-4">1999</span></h1>
+<div class="d-flex justify-content-center"><h1 id="big"><span class="badge badge-danger mt-4">1999</span></h1></div>  
 
 
 <div id="hist">
