--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
 <body>
 
 
+
 <!-- navbar -->
 
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html"><img src="src/booksy.svg" width="140" height="75" class="d-inline-block align-top" alt=""></a>
+  <a class="navbar-brand" ><img src="src/booksy.svg" width="140" height="75" class="d-inline-block align-top" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navi_trgt" aria-controls="Navi_trgt" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse " id="Navi_trgt">
-    <div class="navbar-nav ml-auto">
+    <div class="navbar-nav ml-auto text-center d-flex align-items-center">
       <a class="nav-item nav-link alert-info rounded" href="index.html">Inicio</a>
       <a class="nav-item nav-link" href="aide.html">Les types d'aide  <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="benevoles.html">Les Bénevoles</a>
@@ -128,16 +129,20 @@
 
 
       <h1 class="display-4 sacra">Objectifs de Lutille</h1>
-      <h2>"Est illettrée, toute personne incapable d'accomplir 
+      <h2>
+ <div>L'Association a pour objectif de lutter contre l'illettrisme tel que défini par l'UNESCO.</div>
+               <div> Elle travaille à la prévention auprès des jeunes scolarisés</div>
+               <div> et apporte son concours auprès des adultes en situation d'illettrisme.</div>
+               <div> Elle participe à toute action contribuant à ces missions.</div>
+<hr class="deep-purple accent-2 mt-0 d-inline-block mx-auto text-center fades" style="width: 300px;">
+
+        <div>"Est illettrée, toute personne incapable d'accomplir </div>
               <div> de manière autonome les actes</div>
       de la vie courante qui nécessitent l'aptitude à Lire, à Ecrire, à Calculer " 
-      <div>(définition de l'Unesco).</div>
+      <div><h4>(définition de l'Unesco).</h4></div>
 
 
-      L'Association a pour objectif de lutter contre l'illettrisme tel que défini par l'UNESCO.
-                Elle travaille à la prévention auprès des jeunes scolarisés
-                et apporte son concours auprès des adultes en situation d'illettrisme.
-                Elle participe à toute action contribuant à ces missions.
+     
           </h2>
           <h3><span class="badge badge-success">Dernière mise à jour effectuée <div>le 17 avril 2018</div></span></h3>
          
